--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="inicio">
         <h1>hola</h1>
         <h2>funciona?</h2>
-        <h3></h3>
+        <h3>siiii</h3>
     </div>
     <div class="quienes_somos_1">
         
