--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="index.css" />
 
-    <title>Home</title>
+    <title>Nexus</title>
 </head>
 <body>
     <div class="header">
