--- a/index.html
+++ b/index.html
@@ -5,54 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <title>Nexus</title>
 </head>
 <body>
     <div class="header">
-        <img src="./assets/img/logoBlanco.png" alt="Logo Nexus">
-        <ul>
-            <li ><a href="">INICIO</a></li>
-            <li ><a href="">QUIÉNES SOMOS</a></li>
-            <li ><a href="">CÓMO FUNCIONA</a></li>
-            <li ><a href="">TRABAJOS</a></li>
-            <li ><a href="">INNOVACIÓN</a></li>
-            <li ><a href="">CONTACTO</a></li>
-        </ul>
+        <div class="logo"><img src="./assets/img/logoBlanco.png" alt="Logo Nexus"></div>
+        <div>
+            <ul class="secciones">
+                <li ><a href="#in">INICIO</a></li>
+                <li ><a href="#qs">QUIÉNES SOMOS</a></li>
+                <li ><a href="#cf">CÓMO FUNCIONA</a></li>
+                <li ><a href="#tr">TRABAJOS</a></li>
+                <li ><a href="#inn">INNOVACIÓN</a></li>
+                <li ><a href="#fo">CONTACTO</a></li>
+            </ul>
+        </div>
     </div>
-    <div class="inicio">
+    <div class="inicio" id="in">
         
     </div>
-    <div class="quienes_somos_1">
-        <div>
-            <img src="" alt="">
-            <div>
+    <div class="quienes_somos_1" id="qs">
+        <div class="qs-cont">
+            <img src="./assets/img/trenes.jpeg" alt="">
+            <div class="qs-text">
                 <h1>Quiénes somos</h1>
                 <p>NEXUS fue fundada en 2022 con una misión clara: transformar la forma en que el mundo genera y consume energía. Desde entonces, hemos sido pioneros en el desarrollo de tecnologías energéticas avanzadas que no solo satisfacen las necesidades de hoy, sino que también anticipan las demandas del futuro.</p>
             </div>
         </div>
-        <div>
-            <div>
+        <div class="qs-cont">
+            <div class="qs-text">
                 <h2>Misión y valores</h2>
                 <p>En NEXUS, estamos dedicados a liberar al mundo de su dependencia de los combustibles fósiles, ofreciendo energía que es eficiente, accesible y ecológicamente responsable. Valoramos la innovación, la sostenibilidad y la integridad en todo lo que hacemos.</p>
             </div>
-            <img src="" alt="">
+            <img src="./assets/img/trenes.jpeg" alt="">
         </div>
     </div>
     <div class="quienes_somos_2">
-        <div>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+        <div class="qs2-img">
+            <img class="i1" src="./assets/img/trenes.jpeg" alt="">
+            <img class="i2" src="./assets/img/trenes.jpeg" alt="">
+            <img class="i3" src="./assets/img/trenes.jpeg" alt="">
+            <img class="i4" src="./assets/img/trenes.jpeg" alt="">
+            <img class="i5" src="./assets/img/trenes.jpeg" alt="">
         </div>
-        <div>
+        <div class="qs2-text">
             <h2>Nuestro equipo</h2>
             <p>Nuestro equipo está compuesto por científicos, ingenieros y visionarios con más de una década de experiencia en el campo energético. Juntos, trabajamos para liderar la transición hacia un futuro más sostenible y tecnológicamente avanzado.</p>
         </div>
     </div>
-    <div class="como_funciona">
+    <div class="como_funciona" id="cf">
         <h1>¿Cómo funciona?</h1>
         <div class="cards-cont">
             <div class="card-wrapper swiper-wrapper">
@@ -79,52 +83,55 @@
             </div>
         </div>
     </div>
-    <div class="trabajos">
+    <div class="trabajos" id="tr">
         <h1>Trabajos</h1>
-        <div>
+        <div class="trabajos-text">
             <h2>Nuestros proyectos</h2>
             <p>Innovación en Movimiento En NEXUS, hemos sido pioneros en la implementación de tecnologías que están transformando el mundo. A lo largo de los años, hemos trabajado en una serie de proyectos revolucionarios que demuestran nuestro compromiso con la innovación y la sostenibilidad.</p>
         </div>
-        <div>
+        <div class="trabajos-img">
             <div class="cont1">
-                <img src="" alt="">
+                <h3>Trenes del Futuro</h3>
+                <img src="./assets/img/trenes.jpeg" alt="">
             </div>
             <div class="cont1">
-                <img src="" alt="">
+                <h3>Plantas de energía cuántica</h3>
+                <img src="./assets/img/trenes.jpeg" alt="">
             </div>
             <div class="cont1">
-                <img src="" alt="">
+                <h3>Microrredes inteligentes</h3>
+                <img src="./assets/img/trenes.jpeg" alt="">
             </div>
         </div>
     </div>
-    <div class="innovacion">
+    <div class="innovacion" id="inn">
         <h1>Innovación</h1>
-        <div>
+        <div class="in-text">
             <h2>Nuestra Visión para el Mañana</h2>
             <p>NEXUS no solo se trata de satisfacer las necesidades energéticas actuales. Estamos comprometidos a anticipar los desafíos del futuro. Con nuestros proyectos innovadores y un equipo dedicado, estamos liderando la revolución energética.</p>
         </div>
-        <div>
+        <div class="in-text">
             <h2>Próximos lanzamientos</h2>
             <p>Estamos preparando una serie de innovaciones que cambiarán la forma en que entendemos y utilizamos la energía. Mantente atento a nuestro próximo anuncio, que promete redefinir los estándares de la industria.</p>
         </div>
         <div class="carrusel">
         </div>
     </div>
-    <div class="footer">
+    <div class="footer" id="fo">
         <h1>Contacto</h1>
         <h2>Estamos Aquí para Ti</h2>
         <p>¿Tienes preguntas o deseas más información sobre nuestras soluciones energéticas? Estamos listos para ayudarte. Comunícate con nosotros a través de los siguientes medios:</p>
-        <div>
-            <img src="" alt="">
-            <h3>+54 2262 316661</h3>
+        <div class="f-text">
+            <span class="material-symbols-rounded">call</span>
+            <p>+54 2262 316661</p>
         </div>
-        <div>
-            <img src="" alt="">
-            <h3>contacto@nexusenergia.com</h3>
+        <div class="f-text">
+            <span class="material-symbols-rounded">mail</span>
+            <p>contacto@nexusenergia.com</p>
         </div>
-        <div>
-            <img src="" alt="">
-            <h3>Diag. 78 y 62, La Plata, Argentina</h3>
+        <div class="f-text">
+            <span class="material-symbols-rounded">location_on</span>
+            <p>Diag. 78 y 62, La Plata, Argentina</p>
         </div>
     </div>
     
