--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <title>Nexus</title>
 </head>
@@ -25,7 +24,30 @@
         </div>
     </div>
     <div class="inicio" id="in">
-        
+        <div class="countdown">
+            <div class="count-text">
+                <p id="dias">00</p>
+                <span>Días</span>
+            </div>
+            <div class="count-text">
+                <p id="horas">00</p>
+                <span>Horas</span>
+            </div>
+            <div class="count-text">
+                <p id="minutos">00</p>
+                <span>Minutos</span>
+            </div>
+            <div class="count-text">
+                <p id="segundos">00</p>
+                <span>Segundos</span>
+            </div>
+        </div>
+        <div>
+            <span class="material-symbols-rounded"><a href="#qs">keyboard_arrow_down </a></span>
+        </div>
+        <video muted autoplay loop>
+            <source src="./assets/vid/Fondo Tecnológico HD.mp4">
+        </video>
     </div>
     <div class="quienes_somos_1" id="qs">
         <div class="qs-cont">
@@ -135,5 +157,6 @@
         </div>
     </div>
     
+    <script> src= "script.js"</script>
 </body>
 </html>
