--- a/index.html
+++ b/index.html
@@ -45,9 +45,12 @@
         <div>
             <span class="material-symbols-rounded"><a href="#qs">keyboard_arrow_down </a></span>
         </div>
+    </div>
+    <div class="video-inicio">
         <video muted autoplay loop>
-            <source src="./assets/vid/Fondo Tecnológico HD.mp4">
+            <source src="./assets/vid/Fondo Tecnológico HD.mp4" type="video/mp4">
         </video>
+        <div class="capa"></div>
     </div>
     <div class="quienes_somos_1" id="qs">
         <div class="qs-cont">
