--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="header">
         <div class="logo"><img src="./assets/img/logoBlanco.png" alt="Logo Nexus"></div>
-        <div>
+        <div class="desktop-only">
             <ul class="secciones">
                 <li ><a href="#in">INICIO</a></li>
                 <li ><a href="#qs">QUIÉNES SOMOS</a></li>
