--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <title>Nexus</title>
 </head>
 <body>
+
+
     <div class="header">
         <div class="logo"><img src="./assets/img/logoBlanco.png" alt="Logo Nexus"></div>
         <div class="desktop-only">
@@ -26,6 +28,8 @@
             </ul>
         </div>
     </div>
+
+
     <div class="codigo" id="codigo">
         <div class="cod-text">
             <span class="material-symbols-rounded">lock</span>
@@ -39,20 +43,10 @@
             </div>
             <p id="mensaje-error" style="color: red; display: none;">Código incorrecto. Inténtalo de nuevo.</p>
         </div>
-        <!-- <form id="form-codigo" action="#">
-            <div class="form-cont">
-                <div class="imput-wrap">
-                    <p placeholder="Numero">Ingrese la clave</p>
-                    <p><input type="number" id="numero" required></p>
-                </div>
-                <div class="boton-conf">
-                    <input type="submit" value="Confirmar" class="btn-conf">
-                </div>
-            </div>
-        </form> -->
-
     </div>
-    <div class="inicio" id="in">
+
+
+    <div class="inicio oculto " id="in">
         <div class="in-contenido">
         <div class="inicio-texto">
         <div>
@@ -240,7 +234,7 @@
         </div>
         <div class="f-text">
             <span class="material-symbols-rounded">mail</span>
-            <p>contacto@nexusenergia.com</p>
+            <p>contactonexusarg@gmail.com</p>
         </div>
         <div class="f-text">
             <span class="material-symbols-rounded">location_on</span>
