--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
             </div>
         </div>
         </div>
-        <div>
-            <span class="material-symbols-rounded"><a href="#qs">keyboard_arrow_down </a></span>
-        </div>
+        
+    </div>
+    <div class="flecha">
+        <span class="material-symbols-rounded"><a href="#qs">keyboard_arrow_down </a></span>
     </div>
         <div class="video-inicio">
             <video muted autoplay loop>
