--- a/index.html
+++ b/index.html
@@ -39,14 +39,16 @@
             <h3>Ingrese la clave</h3>
             <div class="clave-cont">
                 <input type="text" id="codigo-input" maxlength="4" placeholder="0000" autocomplete="off">
-                <button id="verificar-btn" onclick="verificarCodigo()"><span class="material-symbols-rounded">expand_circle_right</span></button>
+                <button id="verificar-btn" onclick="verificarCodigo()">
+                    <span class="material-symbols-rounded">expand_circle_right</span>
+                </button>
             </div>
             <p id="mensaje-error" style="color: red; display: none;">Código incorrecto. Inténtalo de nuevo.</p>
         </div>
     </div>
 
 
-    <div class="inicio oculto " id="in">
+    <div class="inicio oculto" id="in">
         <div class="in-contenido">
         <div class="inicio-texto">
         <div>
