--- a/index.html
+++ b/index.html
@@ -14,8 +14,25 @@
 </head>
 <body>
 
+    <nav class="header">
+        <a href="#" class="enlace">
+            <img class="logo" src="./assets/img/logoBlanco.png" alt="logo Nexus">
+        </a>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <span class="material-symbols-rounded">menu</span>
+        </label>
+        <ul class="secciones">
+            <li ><a href="#in">INICIO</a></li>
+            <li ><a href="#qs">QUIÉNES SOMOS</a></li>
+            <li ><a href="#cf">CÓMO FUNCIONA</a></li>
+            <li ><a href="#tr">TRABAJOS</a></li>
+            <li ><a href="#inn">INNOVACIÓN</a></li>
+            <li ><a href="#fo">CONTACTO</a></li>
+        </ul>
+    </nav>
 
-    <div class="header">
+    <!-- <div class="header">
         <div class="logo"><img src="./assets/img/logoBlanco.png" alt="Logo Nexus"></div>
         <div class="desktop-only">
             <ul class="secciones">
@@ -27,7 +44,7 @@
                 <li ><a href="#fo">CONTACTO</a></li>
             </ul>
         </div>
-    </div>
+    </div> -->
 
 
     <div class="codigo" id="codigo">
