--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div id="codigo-section">
             <h3>Ingrese la clave</h3>
             <div class="clave-cont">
-                <input type="text" id="codigo-input" maxlength="4" placeholder="0000" autocomplete="off">
+                <input type="password" id="codigo-input" maxlength="4" placeholder="0000" autocomplete="off">
                 <button id="verificar-btn" onclick="verificarCodigo()">
                     <span class="material-symbols-rounded">expand_circle_right</span>
                 </button>
