--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </a>
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
-            <span class="material-symbols-rounded">menu</span>
+            <img class="material-symbols-rounded" src="./assets/iconos/menu.svg" alt="menu">
         </label>
         <ul class="secciones">
             <li ><a href="#in">INICIO</a></li>
@@ -35,7 +35,7 @@
     <!-- ---------- CÓDIGO DE INGRESO ---------- -->
     <div class="codigo" id="codigo">
         <div class="cod-text">
-            <span class="material-symbols-rounded">lock</span>
+            <img class="material-symbols-rounded" src="./assets/iconos/candado2.svg" alt="candado">
             <h2>ACCESO RESTRINGIDO</h2>
         </div>
         <div id="codigo-section">
@@ -43,7 +43,7 @@
             <div class="clave-cont">
                 <input type="password" id="codigo-input" maxlength="4" placeholder="0000" autocomplete="off">
                 <button id="verificar-btn" onclick="verificarCodigo()">
-                    <span class="material-symbols-rounded">expand_circle_right</span>
+                    <img class="material-symbols-rounded" src="./assets/iconos/flechacostado2.svg" alt="flecha">
                 </button>
             </div>
             <p id="mensaje-error" style="color: red; display: none;">Código incorrecto. Inténtalo de nuevo.</p>
@@ -81,7 +81,8 @@
             </div>
         </div>
         <div class="flecha">
-            <span class="material-symbols-rounded"><a href="#qs">keyboard_arrow_down </a></span>
+            <!-- <span class="material-symbols-rounded"><a href="#qs">keyboard_arrow_down </a></span> -->
+            <a class="flecha-hover" href="#qs"><img src="./assets/iconos/flecha1.png" alt="flecha"></a>
         </div>
         <div class="video-inicio">
             <video muted autoplay loop>
@@ -236,15 +237,15 @@
         <h2>Estamos Aquí para Ti</h2>
         <p>¿Tienes preguntas o deseas más información sobre nuestras soluciones energéticas? Estamos listos para ayudarte. Comunícate con nosotros a través de los siguientes medios:</p>
         <div class="f-text">
-            <span class="material-symbols-rounded">call</span>
+            <img class="material-symbols-rounded" src="./assets/iconos/telefono.svg" alt="icono telefono">
             <p>+54 2262 316661</p>
         </div>
         <div class="f-text">
-            <span class="material-symbols-rounded">mail</span>
+            <img class="material-symbols-rounded" src="./assets/iconos/mail.svg" alt="icono mail">
             <p>contactonexusarg@gmail.com</p>
         </div>
         <div class="f-text">
-            <span class="material-symbols-rounded">location_on</span>
+            <img class="material-symbols-rounded" src="./assets/iconos/location.svg" alt="icono dirección">
             <p>Diag. 78 y 62, La Plata, Argentina</p>
         </div>
     </div>
